- Selected text highlighter improved. - Bracket highlighter needs more work.